--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,7 @@ export(M3C)
 export(clustersim)
 import(Matrix)
 import(doParallel)
-importFrom(foreach,"%dopar%")
+import(parallel)
+import(foreach)
+import(ggplot2)
+importFrom(doSNOW,"registerDoSNOW")
