--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: M3C
 Title: Monte Carlo Consensus Clustering
-Version: 0.99.91
+Version: 0.99.92
 Authors@R: person("Christopher", "John", email = "chris.r.john86@gmail.com", role = c("aut", "cre"))
-Description: M3C: Monte Carlo Consensus Clustering, is based on the importance of comparing stability of the real dataset with that expected under the null hypothesis, i.e. there is no structure. We chose to maintain the correlation structure of the original data and use a monte carlo simulation from a normal distribution to create random datasets for comparison with the real. By generating a distribution of stability scores from the null dataset we use this for calculation of 2 metrics, 1) the pac-statistic - which compares the mean 2) an empirical p value.
+Description: M3C: Monte Carlo Consensus Clustering, is based on the importance of comparing stability of the real dataset with that expected under the null hypothesis, i.e. there is no structure. We chose to maintain the correlation structure of the original data and use a monte carlo simulation from a normal distribution to create random datasets for comparison with the real. By generating a distribution of stability scores from the null dataset we use this for calculation of 2 metrics, 1) the relative cluster stability index, 2) an empirical p value. This tool is an implementation of a novel hypothesis testing framework for consensus clustering and this method could be applied for other clustering tools.
 Depends: R (>= 3.4.0)
 License: AGPL-3
 Encoding: UTF-8
