--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,11 @@ export(M3C)
 export(clustersim)
 import(Matrix)
 import(doParallel)
+import(ggplot2)
+import(doSNOW)
+import(NMF)
+import(RColorBrewer)
+import(cluster)
 import(parallel)
 import(foreach)
-import(ggplot2)
 import(matrixcalc)
-importFrom(doSNOW,"registerDoSNOW")
