--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(M3C)
 export(clustersim)
+export(pca)
 import(Matrix)
 import(doParallel)
 import(ggplot2)
@@ -12,3 +13,5 @@ import(cluster)
 import(parallel)
 import(foreach)
 import(matrixcalc)
+import(dendextend)
+import(sigclust)
