added feature filter function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(M3C)
 export(clustersim)
 export(pca)
 export(tsne)
+export(featurefilter)
 import(Matrix)
 import(doParallel)
 import(ggplot2)
