changed cholesky method to be better

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: M3C
 Title: Monte Carlo Reference-based Consensus Clustering
-Version: 1.5.6
+Version: 1.5.7
 Authors@R: person("Christopher", "John", email = "chris.r.john86@gmail.com", role = c("aut", "cre"))
 Description: M3C is an improved consensus clustering algorithm based on the work of Monti et al. (2003).
 Depends: R (>= 3.4.0)
@@ -21,7 +21,8 @@ Imports:
 	dendextend,
 	sigclust,
 	Rtsne,
-	survival
+	survival,
+	corpcor
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
