--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,13 @@
 
 export(M3C)
 export(clustersim)
+export(featurefilter)
 export(pca)
 export(tsne)
-export(featurefilter)
+export(umap)
 import(Matrix)
 import(doParallel)
+importFrom(foreach,"%dopar%")
 import(ggplot2)
 import(doSNOW)
 import(NMF)
