--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,3 +22,4 @@ import(sigclust)
 import(Rtsne)
 import(survival)
 importFrom(corpcor,cov.shrink)
+importFrom("grDevices", "colorRampPalette", "dev.off", "png")
