--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,15 +11,10 @@ import(doParallel)
 importFrom(foreach,"%dopar%")
 import(ggplot2)
 import(doSNOW)
-import(NMF)
-import(RColorBrewer)
 import(cluster)
 import(parallel)
 import(foreach)
 import(matrixcalc)
-import(dendextend)
-import(sigclust)
 import(Rtsne)
-import(survival)
+import(umap)
 importFrom(corpcor,cov.shrink)
-importFrom("grDevices", "colorRampPalette", "dev.off", "png")
